# gmail-agent

./: .contact_memory.json  .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.yaml  pyproject.toml
.claude/: rules.md
.github/workflows/: deploy.yml
docs/runbooks/: gmail-auth-recovery.md
scripts/: gmail_auth.py  setup_firestore.sh  setup_github_wif.sh  setup_gmail_labels.py  setup_pubsub.sh  setup_scheduler.sh
src/email_agent/: __init__.py  config.py  main.py  user_config.py
src/email_agent/agent/: __init__.py  classifier.py  graph.py  prompts.py  state.py
src/email_agent/api/: __init__.py  routes.py  schemas.py  webhook.py
src/email_agent/gmail/: __init__.py  auth.py  client.py  labels.py  watch.py
src/email_agent/prompts/: templates.py
src/email_agent/security/: __init__.py  pubsub_auth.py  sanitization.py
src/email_agent/services/: draft_generator.py  email_formatter.py  style_learner.py  tone_detector.py
src/email_agent/storage/: __init__.py  contact_memory.py  history_tracker.py
src/email_agent/tools/: __init__.py  base.py  calendar.py  contacts.py  (+1 more)
tests/: conftest.py
tests/agent/: test_graph_integration.py
tests/api/: test_routes.py  test_webhook.py
tests/fixtures/: sample_emails.json
tests/gmail/: __init__.py  test_client.py
tests/security/: __init__.py  test_sanitization.py
tests/storage/: test_contact_memory.py  test_history_tracker.py
tests/tools/: test_base.py  test_calendar.py  test_contacts.py  test_email_search.py  test_registry.py
tests/unit/: test_classifier.py  test_draft_generator.py  test_style_learner.py  test_tone_detector.py  test_user_config.py
(+15 files in other folders)
